some spellign corrections  and links added

--- a/CH01L01.md
+++ b/CH01L01.md
@@ -1,20 +1,20 @@
-React es una libreria desarrollada por facebook y pensada para construir interfaces de usuarios.
+React es una librería desarrollada por facebook y pensada para construir interfaces de usuarios.
 
-Dentro de sus caracteristicas principales es que es:
+Dentro de sus características principales es que es:
 
   - Declarativo
   - Basado en Componentes
-  - Aprende una ves y aplicalo en todos lados.
+  - Aprende una vez y aplicalo en todos lados.
 
-React hace uso extensivo de la nueva sintaxis es6, la cual ya es el estandar de la industria, si aun no sabes es6 te recomiendo ver.
+React hace uso extensivo de la nueva sintaxis es6, la cual ya es el estandar de la industria, si aún no sabes es6 te recomiendo ver.
 
 - [Variables y constantes en es6.](https://www.youtube.com/watch?v=mmJ5wPvdlIw)
 - [Arrow functions en es6.](https://www.youtube.com/watch?v=pCUS46kmAz0)
 - POO en es6
 - String Templating es es6.
 
-Ademas de esto el uso del paradigma declarativo hace que react sea bastante facil y rapido de desarrollar. React usa una fuente unica de datos en un componente o clase, y la interfas grafica cambiara si los datos en esta fuente cambian.
+Además de esto el uso del paradigma declarativo hace que react sea bastante fácil y rápido de desarrollar. React usa una fuente única de datos en un componente o clase, y la interfaz gráfica cambiará si los datos en esta fuente cambian.
 
-Los components en react son reutilizables, asi que podemos escribir el codigo de un boton, por ejemplo y utilizar este codigo muchas veces, cambiando solo las propiedades del mismo.
+Los components en react son reutilizables, asi que podemos escribir el código de un botón, por ejemplo y utilizar este código muchas veces, cambiando solo las propiedades del mismo.
 
 Si vienes del mundo de jQuery te recomiendo el video [paradigma declarativo vs imperativo](http://#)
