--- a/CH01L03.md
+++ b/CH01L03.md
@@ -1,14 +1,14 @@
 # Instalando el entorno de desarrollo.
 
-Espero que estes tan emocionado como yo por comenzar. Antes de poder hacerlo tenemos que preparar e instalar las herramientas necesarias para desarrollar react native.
+Espero que estés tan emocionado como yo por comenzar. Antes de poder hacerlo tenemos que preparar e instalar las herramientas necesarias para desarrollar react native.
 
-react-native usa un servidor Node js para ejecutar su codigo, asi que lo necesitaremos.
+react-native usa un servidor Node js para ejecutar su código, asi que lo necesitaremos.
 
 Necesitaremos:  
-  - NVM [(Instalacion)](instalando-nvm.md)
-  - Node (Instalacion)
-  - Xcode (Instalacion)
-  - Android Studio (Instalacion)
-  - Sublime Text o el editor de tu preferencia (Instalacion)
+  - NVM [(Instalación)](instalando-nvm.md)
+  - Node [(Instalación)](Instalando-node-y-npm.md)
+  - Xcode [(Instalación)](https://apps.apple.com/mx/app/xcode/id497799835?l=en&mt=12)
+  - Android Studio [(Instalación)](https://developer.android.com/studio/install)
+  - Sublime Text o el editor de tu preferencia (Instalación)
 
-  Una ves instalado esto es hora de iniciar asi que empezemos!
+  Una vez instalado esto es hora de iniciar asi que empezemos!
