more spelling corrections

--- a/CH01L01.md
+++ b/CH01L01.md
@@ -1,3 +1,5 @@
+# ¿Qué es React JS?
+
 React es una librería desarrollada por facebook y pensada para construir interfaces de usuarios.
 
 Dentro de sus características principales es que es:
