--- a/CH01L02.md
+++ b/CH01L02.md
@@ -1,4 +1,4 @@
-# ¿Qué es react native?
+# ¿Qué es React Native?
 
 Es la implementación de la librería declarativa React para desarrollar aplicaciones moviles multiplataforma. Es decir, que se ejecuten tanto en Android como IOS.
 
