--- a/CH02L02.md
+++ b/CH02L02.md
@@ -2,4 +2,6 @@
 
 En el tema anterior instalamos el React Native CLI, la interfaz de linea de comandos que nos permite crear nuevos proyectos e interactuar con ellos.
 
-A continuación utilizaremos el React Native CLI para crear un nuevo proyecto, esto se logra ejecutando el siguiente comando desde la terminal `react-native init MyFirstApp`, con esto el CLI nos crea carpeta llamada "MyFirstApp", la cual contiene la nuestra aplicación con el mismo nombre y está lista para ejecutarse tanto en IOS como en Android.
+A continuación utilizaremos el React Native CLI para crear un nuevo proyecto, esto se logra ejecutando el siguiente comando desde la terminal `react-native init MyFirstApp`.
+
+Con el comando que ejecutamos anteriormente el CLI nos crea carpeta llamada "MyFirstApp", la cual contiene la nuestra aplicación con el mismo nombre y está lista para ejecutarse tanto en IOS como en Android.
