--- a/CH02L03.md
+++ b/CH02L03.md
@@ -1,6 +1,6 @@
 # Ejecutar mi app en Android y IOS
 
-Una vez que CLI ha terminado de crear los archivos necesarios e instalado todas la dependencias necesarias lo primero que debemos hacer es posicionarnos en la nueva carpeta que se ha creado con nuestra terminal.
+Una vez que el CLI ha terminado de crear los archivos necesarios e instalado todas la dependencias necesarias, lo primero que debemos hacer es posicionarnos en la nueva carpeta que se ha creado con nuestra terminal.
 
 
 ### IOS
@@ -9,7 +9,7 @@ Ya que nos hemos posicionado en nuestra nueva carpeta la cual acaba de ser cread
 
 Eso hará que se ejecute un Simulador de IOS y también una nueva ventana de nuestra terminal con un servidor quien es el encargado en compilar todos nuestros archivos Javascript y en un solo archivo el cual es el que se interpreta en nuestra aplicación.
 
-> Opcionalmente también podemos ejecutar nuestra app desde Xcode sin ningun problema.
+> Opcionalmente también podemos ejecutar nuestra app desde Xcode sin ningún problema.
 
 ### Android
 
@@ -40,4 +40,4 @@ export PATH=$PATH:$ANDROID_HOME/tools/bin
 export PATH=$PATH:$ANDROID_HOME/platform-tools
 ```
 
-Una vez hecho esto, reiniciamos nuestra terminal y ya estamos listos para ejecutar nuestra aplicación de React Native en Android
+Una vez hecho esto, reiniciamos nuestra terminal y ya estamos listos para ejecutar nuestra aplicación de React Native en Android.
