lession 4 is done

--- a/CH02L04.md
+++ b/CH02L04.md
@@ -36,3 +36,62 @@ Esta carpeta es la que contiene el proyecto nativo de android y todas sus depend
 ##### IOS
 
 Esta carpeta como lo es con la de android, también contiene el proyecto nativo, pero en este caso es el de IOS.
+
+##### node_modules
+
+En esta carpeta se almacenan todos los módulos de node que se instalen con `npm`, los cuales son dependencias para el proyecto.
+
+##### .buckconfig
+
+Archivo de configuración de `Buck`, una herramienta de compilación desarrollada igualmente por Facebook.
+
+##### .eslintrc.js
+
+Archivo de configuración para [Eslint](https://eslint.org/), una herramienta para resaltado de buenas practicas de escritura de código.
+
+##### .flowconfig
+
+Archivo de configuración para [Flow](https://flow.org/), una herramienta para verificación de tipos en javascript.
+
+##### .gitattributes
+
+Este archivo nos permite definir diferentes atrubutos de git por pathname.
+
+
+##### .gitignore
+
+En este podemos definir cuales con los archivos o directorios que queremos que git omita en nuestro repositorio
+
+##### .watchmanconfig
+
+Archivo de configuracion para la herramienta [Watchman](https://facebook.github.io/watchman/)
+
+##### App.js
+
+En este archivo encontraremos el código de la aplicación de ejemplo que es creada por el CLI de React native, cuando iniciamos un nuevo proyecto.
+
+##### app.json
+
+En este archivo encontraremos información acerca de nuestra aplicación
+
+##### babel.config.js
+
+Archivo de configuración para [BabelJS](https://babeljs.io/)
+
+##### index.js
+
+En este archivo encontraremos la implementación de la Clase [`AppRegistry`](https://facebook.github.io/react-native/docs/0.59/appregistry), la cual funciona como punto de entrada para ejecutar aplicaciónes de React Native.
+
+##### metro.config.js
+
+Archivo de configuración para [Metro](https://facebook.github.io/metro/en/), un empaquetador Javascript para React Native.
+
+##### [package-lock.json](https://docs.npmjs.com/files/package-locks)
+
+Archivo que contiene información sobre las dependencias que han sido instaladas y sus versiones.
+
+##### package.json
+
+Este archivo contiene información acerca de las dependencias de node que son necesarias para poder ejecutar el proyecto de manera optima.
+
+
